--- a/Cabbages.rmd
+++ b/Cabbages.rmd
@@ -42,8 +42,10 @@ boxplot(VitC~Cult,data=veggy)
 <!--Graphical results here.  Make sure to show your code.  Provide appropriate labels for axes, giving units if possible, and provide a good title for the graph, too.  Use the graphical results to describe the patterns if any that exist in the data as focused toward the research question!-->
 The category c39 for cultivation cabbages had an overall lower mean for the numerical result of vitamin c. While the C52 category had a higher mean of the vitamin c using their cultivation method.  
   
-### Numerical Descriptive Results
-
+### Numerical Descriptive Results  
+```{r}
+favstats(VitC~Cult,data=veggy)
+```
 <!--Numerical results go here. Use the numerical results to describe the patterns if any that exist in the data as focused toward the research question!-->
 
 ## Inferential Results
