--- a/Cabbages.rmd
+++ b/Cabbages.rmd
@@ -48,6 +48,8 @@ favstats(VitC~Cult,data=veggy)
 ```
 <!--Numerical results go here. Use the numerical results to describe the patterns if any that exist in the data as focused toward the research question!-->
 
+The cultivation method c39 had a median of 51.0, c52 had a median of 64.5. The mean for c39 is 51.5 while the mean for c52 is 64.4. This shows the cultivation method of c52 was succesful in producing more vitamin c content.  
+
 ## Inferential Results
 
 <!--State hypothesis clearly.  Make sure your discussion of the inferential test covers all the aspects that the test output produces, such as test statistic, p-value etc.  Make a decision about the null hypothesis, explain the assumptions on which the selected test/procedure was based, and why the chosen procedure satisfys the assumptions and is appropriate to answer the research question!-->
