--- a/Cabbages.rmd
+++ b/Cabbages.rmd
@@ -57,6 +57,7 @@ t.test(VitC~Cult,data=veggy)
 ```
 <!--State hypothesis clearly.  Make sure your discussion of the inferential test covers all the aspects that the test output produces, such as test statistic, p-value etc.  Make a decision about the null hypothesis, explain the assumptions on which the selected test/procedure was based, and why the chosen procedure satisfys the assumptions and is appropriate to answer the research question!-->
 
+Based on our t-sample we can infer that the p-value is 0.00000003405 from this we can reject the null hypothesis because the probability of the sample result was very small. This means the null hypothesis is false.  
 
 # Discussion and Conclusion
 
