--- a/Cabbages.rmd
+++ b/Cabbages.rmd
@@ -59,6 +59,8 @@ t.test(VitC~Cult,data=veggy)
 
 Based on our t-sample we can infer that the p-value is 0.00000003405 from this we can reject the null hypothesis because the probability of the sample result was very small. This means the null hypothesis is false.  
 
-# Discussion and Conclusion
+# Discussion and Conclusion  
 
 <!--Discussion and conclusion here.  If you found a relationship be sure to consider whether the relationship occurs because one of the variavbles causes the other, or whether they perhasps are related for some other reason.  Watch the chapter 6 videos from the GeorgeTown videos collection.!-->
+
+Our original question was: Is there a difference in average VitC between c39 and c52 cultivation methods? Based off of our numerical descriptive results and our inferential results; we can see that the cultivation method does affect the vitamin c content. We used a box plot and a table to figure out our values and percentages. The median and average were much higher for c52 cultivation method.   
